backend/k8s/flask-app-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flask-to-history
  namespace: ashapp
spec:
  podSelector:
    matchLabels:
      app: history-service
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: flask-app
    ports:
    - protocol: TCP
      port: 8081
  policyTypes:
  - Ingress
